--- a/example/Makefile
+++ b/example/Makefile
@@ -1,12 +1,12 @@
 INCLUDE := ../include
-CXXFLAGS += -O3 -g -Wall -I$(INCLUDE) 
+CXXFLAGS += -O3 -g -Wall -I$(INCLUDE) #-DBOOST_DISABLE_ASSERTS
 # -Wno-unused-but-set-variable -Wno-unused-variable -Wno-unused-local-typedefs
 GSPAN_HEADERS := $(shell find $(INCLUDE) -type f -name '*.hpp')
 
 all: gspan
 
-gspan: test_gspan.cpp $(GSPAN_HEADERS)
+gspan: test_gspan.cpp Makefile $(GSPAN_HEADERS)
 	$(CXX) $(CXXFLAGS) $< -o $@
 
 clean:
-	rm -rf *.o gspan test_minimum_check
+	rm -rf *.o gspan
