optimization: add partial pruning to enumerate

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,6 +1,8 @@
 INCLUDE := ../include
-CXXFLAGS += -O3 -g -Wall -I$(INCLUDE) #-DBOOST_DISABLE_ASSERTS
-# -Wno-unused-but-set-variable -Wno-unused-variable -Wno-unused-local-typedefs
+CXXFLAGS += -O3 -g -Wall -I$(INCLUDE) 
+#CXXFLAGS += -DBOOST_DISABLE_ASSERTS 
+#CXXFLAGS += -Wno-unused-but-set-variable -Wno-unused-variable -Wno-unused-local-typedefs
+
 GSPAN_HEADERS := $(shell find $(INCLUDE) -type f -name '*.hpp')
 
 all: gspan
